Network/Ingress/templates/GatewayLab.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gw
  namespace: core-prod
  # gitpods.writemy.codes,*.gitpods.writemy.codes,*.ws.gitpods.writemy.codes

  labels:
    wan-mode: 'public'

spec:
  gatewayClassName: cilium

  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 66.165.222.106
      io.cilium/lb-ipam-sharing-key: ingress-gw
      io.cilium/lb-ipam-ips: 66.165.222.106

  listeners:
    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: 'gitpods.writemy.codes'
      name: gitpods-root
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.gitpods.writemy.codes'
      name: gitpods-main
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - protocol: TLS # Other possible value is `TLS`
      port: 443
      hostname: '*.ws.gitpods.writemy.codes'
      name: gitpods-workspace
      tls:
        mode: Passthrough # If protocol is `TLS`, `Passthrough` is a possible mode

    - name: https-main
      protocol: HTTPS
      port: 443
      hostname: "idp.mylogin.space"
      tls:
        certificateRefs:
          - kind: Secret
            name: myloginspace-default-certificates
